--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="form-box">
 				<label for="password">Hasło:</label>
 				<input
-					type="text"
+					type="password"
 					id="password"
 					placeholder="Podaj nazwę użytkownika"
 				/>
@@ -33,16 +33,23 @@
 			</div>
 			<div class="form-box">
 				<label for="password2">Powtórz hasło:</label>
-				<input type="text" id="password2" placeholder="Powtórz hasło" />
+				<input type="password" id="password2" placeholder="Powtórz hasło" />
 
 				<p class="error-text">error</p>
 			</div>
 			<div class="form-box">
-				<label for="password">Adres e-mail:</label>
-				<input type="text" id="password" placeholder="Adres e-mail" />
+				<label for="email">Adres e-mail:</label>
+				<input type="email" id="email" placeholder="Podaj adres mailowy" />
 
 				<p class="error-text">error</p>
 			</div>
+			<div class="contor-batton"></div>
+			<button class="clear">Wyczyść</button>
+			<button class="send">Wyślij</button>
+			<div class="popup"></div>
+			<p>Formularz został poprawnie wysłany</p>
+			<button class="close">Zamknij</button>
+		</div>
 		</form>
 
 		<script src="./js/script.js"></script>
