repair div with buttons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
-		<div class="wrapper"></div>
+		<div class="wrapper">
 		<form>
 			<h1>Zrejestruj się!</h1>
 			<div class="form-box">
@@ -32,8 +32,8 @@
 				<p class="error-text">error</p>
 			</div>
 			<div class="form-box">
-				<label for="password2">Powtórz hasło:</label>
-				<input type="password" id="password2" placeholder="Powtórz hasło" />
+				<label for="password-repeat">Powtórz hasło:</label>
+				<input type="password" id="password-repeat" placeholder="Powtórz hasło" />
 
 				<p class="error-text">error</p>
 			</div>
@@ -43,12 +43,13 @@
 
 				<p class="error-text">error</p>
 			</div>
-			<div class="contor-batton"></div>
+			<div class="control-buttons">
 			<button class="clear">Wyczyść</button>
-			<button class="send">Wyślij</button>
-			<div class="popup"></div>
+			<button class="send">Wyślij</button></div>
+			<div class="popup">
 			<p>Formularz został poprawnie wysłany</p>
-			<button class="close">Zamknij</button>
+			<button class="close">Zamknij</button></div>
+		</div>
 		</div>
 		</form>
 
