Correction of names in for and id

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<form>
 			<h1>Zrejestruj się!</h1>
 			<div class="form-box">
-				<label for="password">Nazwa użytkownika:</label>
+				<label for="username">Nazwa użytkownika:</label>
 				<input
 					type="text"
-					id="password"
+					id="username"
 					placeholder="Podaj nazwę użytkownika"
 				/>
 
@@ -32,8 +32,8 @@
 				<p class="error-text">error</p>
 			</div>
 			<div class="form-box">
-				<label for="password-repeat">Powtórz hasło:</label>
-				<input type="password" id="password-repeat" placeholder="Powtórz hasło" />
+				<label for="password2">Powtórz hasło:</label>
+				<input type="password" id="password2" placeholder="Powtórz hasło" />
 
 				<p class="error-text">error</p>
 			</div>
@@ -50,8 +50,9 @@
 			<p>Formularz został poprawnie wysłany</p>
 			<button class="close">Zamknij</button></div>
 		</div>
-		</div>
+	
 		</form>
+	</div>
 
 		<script src="./js/script.js"></script>
 	</body>
